--- a/templates/admin.html
+++ b/templates/admin.html
@@ -142,7 +142,12 @@
                 {% endif %}
         </ul>
     </nav>
-
+    <footer id="contact">
+        <div class="container">
+            <p>Contact me <a href="https://discord.com/users/781158548364853270">Discord</a></p>
+            <p>&copy; 2024 GOL Image Gallery. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
