--- a/templates/index.html
+++ b/templates/index.html
@@ -208,7 +208,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="feature-box">
-                        <h3>Effortless Image Uploads</h3>
+                        <h3>Effortless Image <br> Uploads</h3>
                         <p>Quickly upload your images in various formats with our intuitive interface. Share your
                             favorite moments with ease!</p>
                     </div>
@@ -255,7 +255,7 @@
     <!-- Footer -->
     <footer id="contact">
         <div class="container">
-            <p>Contact us at info@.com</p>
+            <p>Contact me <a href="https://discord.com/users/781158548364853270">Discord</a></p>
             <p>&copy; 2024 GOL Image Gallery. All rights reserved.</p>
         </div>
     </footer>
