--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -107,7 +107,12 @@
                     </ul>
                 </nav>
     </div>
-
+    <footer id="contact">
+        <div class="container">
+            <p>Contact me <a href="https://discord.com/users/781158548364853270">Discord</a></p>
+            <p>&copy; 2024 GOL Image Gallery. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.querySelectorAll('.page-link').forEach(link => {
